<resources>
    <string name="app_name">Singapore Public Funded Universities</string>
    <string name="nus">National University of Singapore</string>
    <string name="smu">Singapore Management University</string>
    <string name="sutd">Singapore University of Technology and Design</string>
    <string name="ntu">Nanyang Technological University</string>
    <string name="sit">Singapore Institute of Technology</string>
    <string name="suss">Singapore University of Social Sciences</string>
</resources>